--- a/title_15_land_use.html
+++ b/title_15_land_use.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="title" content="Title 15 - Land Use" />
   <meta name="last-updated" content="2024-03-19" />
+  <link rel="alternate" type="application/json" href="toc_title_15_land_use.json">
   <title>Title 15 - Land Use | Spanish Fork Municipal Code</title>
 </head>
 <body>
