--- a/title_1_general_provisions.html
+++ b/title_1_general_provisions.html
@@ -6,6 +6,22 @@
   <meta name='title' content='Title 1 - General Provisions' />
   <meta name='last-updated' content='2024-03-19' />
   <title>Title 1 - General Provisions | Spanish Fork Municipal Code</title>
+
+  <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Legislation",
+  "legislationType": "Municipal Code",
+  "name": "Title 1 – General Provisions",
+  "identifier": "1",
+  "jurisdiction": {
+    "@type": "GovernmentOrganization",
+    "name": "Spanish Fork City"
+  },
+  "dateModified": "2024-03-19"
+}
+</script>
+
   <link rel='alternate' type='application/json' href='toc_title_1_general_provisions.json'>
 </head>
 <body>
