--- a/title_2_administration_of_government.html
+++ b/title_2_administration_of_government.html
@@ -6,6 +6,22 @@
   <meta name='title' content='Title 2 - Administration of Government' />
   <meta name='last-updated' content='2024-03-19' />
   <title>Title 2 - Administration of Government | Spanish Fork Municipal Code</title>
+
+  <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Legislation",
+  "legislationType": "Municipal Code",
+  "name": "Title 2 – Administration of Government",
+  "identifier": "2",
+  "jurisdiction": {
+    "@type": "GovernmentOrganization",
+    "name": "Spanish Fork City"
+  },
+  "dateModified": "2024-03-19"
+}
+</script>
+
   <link rel='alternate' type='application/json' href='toc_title_2_administration_of_government.json'>
 </head>
 <body>
