--- a/title_3_revenue_and_finance.html
+++ b/title_3_revenue_and_finance.html
@@ -6,6 +6,22 @@
   <meta name='title' content='Title 3 - Revenue and Finance' />
   <meta name='last-updated' content='2024-03-19' />
   <title>Title 3 - Revenue and Finance | Spanish Fork Municipal Code</title>
+
+  <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Legislation",
+  "legislationType": "Municipal Code",
+  "name": "Title 3 – Revenue and Finance",
+  "identifier": "3",
+  "jurisdiction": {
+    "@type": "GovernmentOrganization",
+    "name": "Spanish Fork City"
+  },
+  "dateModified": "2024-03-19"
+}
+</script>
+
   <link rel='alternate' type='application/json' href='toc_title_3_revenue_and_finance.json'>
 </head>
 <body>
