--- a/title_5_business_licenses.html
+++ b/title_5_business_licenses.html
@@ -6,6 +6,22 @@
   <meta name='title' content='Title 5 - Business Licenses' />
   <meta name='last-updated' content='2024-03-19' />
   <title>Title 5 - Business Licenses | Spanish Fork Municipal Code</title>
+
+  <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Legislation",
+  "legislationType": "Municipal Code",
+  "name": "Title 5 – Business Licenses",
+  "identifier": "5",
+  "jurisdiction": {
+    "@type": "GovernmentOrganization",
+    "name": "Spanish Fork City"
+  },
+  "dateModified": "2024-03-19"
+}
+</script>
+
   <link rel='alternate' type='application/json' href='toc_title_5_business_licenses.json'>
 </head>
 <body>
