--- a/title_6_animals.html
+++ b/title_6_animals.html
@@ -6,6 +6,22 @@
   <meta name='title' content='Title 6 - Animals' />
   <meta name='last-updated' content='2024-03-19' />
   <title>Title 6 - Animals | Spanish Fork Municipal Code</title>
+
+  <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Legislation",
+  "legislationType": "Municipal Code",
+  "name": "Title 6 – Animals",
+  "identifier": "6",
+  "jurisdiction": {
+    "@type": "GovernmentOrganization",
+    "name": "Spanish Fork City"
+  },
+  "dateModified": "2024-03-19"
+}
+</script>
+
   <link rel='alternate' type='application/json' href='toc_title_6_animals.json'>
 </head>
 <body>
