--- a/title_8_nuisances.html
+++ b/title_8_nuisances.html
@@ -6,6 +6,22 @@
   <meta name='title' content='Title 8 - Nuisances' />
   <meta name='last-updated' content='2024-03-19' />
   <title>Title 8 - Nuisances | Spanish Fork Municipal Code</title>
+
+  <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Legislation",
+  "legislationType": "Municipal Code",
+  "name": "Title 8 – Nuisances",
+  "identifier": "8",
+  "jurisdiction": {
+    "@type": "GovernmentOrganization",
+    "name": "Spanish Fork City"
+  },
+  "dateModified": "2024-03-19"
+}
+</script>
+
   <link rel='alternate' type='application/json' href='toc_title_8_nuisances.json'>
 </head>
 <body>
