--- a/title_10_traffic_and_parking.html
+++ b/title_10_traffic_and_parking.html
@@ -6,6 +6,22 @@
   <meta name='title' content='Title 10 - Traffic and Parking' />
   <meta name='last-updated' content='2024-03-19' />
   <title>Title 10 - Traffic and Parking | Spanish Fork Municipal Code</title>
+
+  <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Legislation",
+  "legislationType": "Municipal Code",
+  "name": "Title 10 – Traffic and Parking",
+  "identifier": "10",
+  "jurisdiction": {
+    "@type": "GovernmentOrganization",
+    "name": "Spanish Fork City"
+  },
+  "dateModified": "2024-03-19"
+}
+</script>
+
   <link rel='alternate' type='application/json' href='toc_title_10_traffic_and_parking.json'>
 </head>
 <body>
