--- a/title_12_streets_and_sidewalks.html
+++ b/title_12_streets_and_sidewalks.html
@@ -6,6 +6,22 @@
   <meta name='title' content='Title 12 - Streets and Sidewalks' />
   <meta name='last-updated' content='2024-03-19' />
   <title>Title 12 - Streets and Sidewalks | Spanish Fork Municipal Code</title>
+
+  <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Legislation",
+  "legislationType": "Municipal Code",
+  "name": "Title 12 – Streets and Sidewalks",
+  "identifier": "12",
+  "jurisdiction": {
+    "@type": "GovernmentOrganization",
+    "name": "Spanish Fork City"
+  },
+  "dateModified": "2024-03-19"
+}
+</script>
+
   <link rel='alternate' type='application/json' href='toc_title_12_streets_and_sidewalks.json'>
 </head>
 <body>
