--- a/title_13_utilities.html
+++ b/title_13_utilities.html
@@ -6,6 +6,22 @@
   <meta name='title' content='Title 13 - Utilities' />
   <meta name='last-updated' content='2024-03-19' />
   <title>Title 13 - Utilities | Spanish Fork Municipal Code</title>
+
+  <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Legislation",
+  "legislationType": "Municipal Code",
+  "name": "Title 13 – Utilities",
+  "identifier": "13",
+  "jurisdiction": {
+    "@type": "GovernmentOrganization",
+    "name": "Spanish Fork City"
+  },
+  "dateModified": "2024-03-19"
+}
+</script>
+
   <link rel='alternate' type='application/json' href='toc_title_13_utilities.json'>
 </head>
 <body>
