--- a/title_14_buildings_and_construction.html
+++ b/title_14_buildings_and_construction.html
@@ -6,6 +6,22 @@
   <meta name='title' content='Title 14 - Buildings and Construction' />
   <meta name='last-updated' content='2024-03-19' />
   <title>Title 14 - Buildings and Construction | Spanish Fork Municipal Code</title>
+
+  <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Legislation",
+  "legislationType": "Municipal Code",
+  "name": "Title 14 – Buildings and Construction",
+  "identifier": "14",
+  "jurisdiction": {
+    "@type": "GovernmentOrganization",
+    "name": "Spanish Fork City"
+  },
+  "dateModified": "2024-03-19"
+}
+</script>
+
   <link rel='alternate' type='application/json' href='toc_title_14_buildings_and_construction.json'>
 </head>
 <body>
