--- a/title_15_land_use.html
+++ b/title_15_land_use.html
@@ -6,6 +6,22 @@
   <meta name='title' content='Title 15 - Land Use' />
   <meta name='last-updated' content='2024-03-19' />
   <title>Title 15 - Land Use | Spanish Fork Municipal Code</title>
+
+  <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Legislation",
+  "legislationType": "Municipal Code",
+  "name": "Title 15 – Land Use",
+  "identifier": "15",
+  "jurisdiction": {
+    "@type": "GovernmentOrganization",
+    "name": "Spanish Fork City"
+  },
+  "dateModified": "2024-03-19"
+}
+</script>
+
   <link rel='alternate' type='application/json' href='toc_title_15_land_use.json'>
 </head>
 <body>
