--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang='en'>
 <head>
@@ -23,6 +24,14 @@
     <li><a href="title_14_buildings_and_construction.html">Title 14 – Buildings and Construction</a></li>
     <li><a href="title_15_land_use.html">Title 15 – Land Use</a></li>
   </ul>
+
+  <hr>
+  <h2>Other Code Sections</h2>
+  <ul>
+    <li><a href="public-works/index.html">Public Works Chapters</a></li>
+    <li><a href="construction-&-design-standards/index.html">Construction & Design Standards</a></li>
+  </ul>
+
   <p><a href="toc_master.json">📄 Centralized Master TOC (All Branches)</a></p>
 </body>
 </html>
