--- a/title_15_land_use.html
+++ b/title_15_land_use.html
@@ -1686,86 +1686,99 @@
   </section>
   <section id="15_3_16_170">
     <h3>15.3.16.170 Development Standards</h3>
-    <p>Table 1 Residential</p>
-    <p>Table 2 Commercial And Industrial</p>
-    <p>Table 1 Residential</p>
-    <p>Table 1 - Residential Development Standards</p>
-    <p>District</p>
-    <p>Maximum Density    Per Acre</p>
-    <p>Minimum lot dimensions	Minimum Setback	Max Building Height5</p>
-    <p>Lot Area	Width	Depth	Front6	Rear7	Side	Corner	Principal Building	Accessory Building1</p>
-    <p>A-E	N/A	40 acres	400'	400'	50'	50'	50'	50'	35'	35'</p>
-    <p>R-R	N/A	5 acres	200'	200'	50'	50'	25'	50'	35'	35'</p>
-    <p>R-1-80	.4 units	80,000 sf	180'	200'	40'	80'	20'	30'	35'	20'</p>
-    <p>R-1-60	.53 units	60,000 sf	160'	200'	40'	60'	20'	30'	35'	20'</p>
-    <p>R-1-40	.8 units	40,000 sf	140'	200'	30'	40'	20'	30'	35'	20'</p>
-    <p>R-1-30	1.07 units	30,000 sf	130'	150'	40'	40'	15'	25'	35'	20'</p>
-    <p>R-1-20	1.60 units	20,000 sf	125'	150'	30'	30'	15'	25'	35'	20'</p>
-    <p>R-1-15	2.13 units	15,000 sf	100'	125'	20-25'2	25'	10'	15-25'4	35'	20'</p>
-    <p>R-1-12	2.67 units	12,000 sf	100'	100'	20-25'2	25'	10'	15-25'4	35'	20'</p>
-    <p>R-1-9	3.56 units	9,000 sf	85'	90'	15-25'2	25'	10'	15-25'4	35'	20'</p>
-    <p>R-1-8	4 units	8,000 sf	75'	90'	15-25'2	25'	10'	15-25'4	35'	20'</p>
-    <p>R-1-6	5.34 units	6,000 sf	50'	90'	15-25'2	25'	5-10'3	15-25'4	35'	20'</p>
-    <p>R-3	12 units	6,000 sf	50'	90'	15-25'2	25'	5-10'3	15-25'4	35'	20'</p>
-    <p>R-4	20 units	6,000 sf	50'	90'	15-25'2	25'	5-10'3	15-25'4	50'	20'</p>
-    <p>R-5	18 units	6,000 sf	50'	90'	10-20'8	15'	15'	15'	40'	20'</p>
-    <p>R-0	N/A	6.000 sf	50'	90'	115-25'2	25'	5-10'3	15-25'4	35'	20'</p>
-    <p>Refer to 15.3.24.090(A) for accessory buildings.</p>
-    <p>15 feet to porches, 20 feet to living areas, 25 feet to garages or carports, and 20 feet to the front of a side entry garage.</p>
-    <p>Five (5) feet on one side, 10 feet on the other side for single-family dwellings except for lots with 50 feet of lot width or less. When the lot width is 50 feet or less the minimum setback is five (5) feet on each side. The setback is 10 feet for non-residential uses.</p>
-    <p>15 feet to living area, 25 feet to garages or carports, and 20 feet to the front of a side entry garage.</p>
-    <p>Flag poles are limited to the height of principal buildings in a residential zone.</p>
-    <p>Maximum setback is 250 feet, with an all-weather driveway, capable of supporting a fire truck, and with adequate turn around space for a fire truck at the end of the drive. Greater distances may be allowed if a fire hydrant is installed within 250 feet of the principal building.</p>
-    <p>On corner lots, the setback is reduced by five (5) feet.</p>
-    <p>10 feet minimum front setback, 20-foot maximum front setback.</p>
-    <p>Except as defined with the Infill Overlay Zone.</p>
-    <p>HISTORY</p>
-    <p>Amended by Ord. 15-13 on 9/3/2013</p>
-    <p>Amended by Ord. 13-14 on 8/19/2014</p>
-    <p>Amended by Ord. 05-16 on 4/5/2016</p>
-    <p>Amended by Ord. 11-17 on 4/18/2017</p>
-    <p>Amended by Ord. 25-17 on 10/17/2017</p>
-    <p>Amended by Ord. 21-18 on 11/20/2018</p>
-    <p>Amended by Ord. 20-18 on 11/20/2018</p>
-    <p>Amended by Ord. 21-18 on 12/11/2018</p>
-    <p>Amended by Ord. 03-19 on 1/22/2019</p>
-    <p>Amended by Ord. 12-19 on 6/18/2019</p>
-    <p>Amended by Ord. 12-22 on 2/15/2022</p>
-    <p>Amended by Ord. 06-2023 Amendment to Title 15 that would modify the density that is permitted in Master Planned Developments on 4/18/2023</p>
-    <p>Amended by Ord. 24-2023 Amending Various Sections of the Spanish Fork Municipal Code Pertaining to Title 15 updates and Amendments Regarding Adding Illustrations, Mailboxes, and Off-Street Parking on 12/12/2023 on 12/12/2023</p>
-    <p>Table 2 Commercial And Industrial</p>
-    <p>Table 2 - Commercial and Industrial Development Standards</p>
-    <p>District	Minimum Setback1	Max Building Height</p>
-    <p>Front	Rear	Side	Corner	Principal Building	Accessory Building1</p>
-    <p>C-O	15'4 -25'	0-25'</p>
-    <p>0-10'	10'5-15'	30'	20'</p>
-    <p>C-UV	25'	0-25'</p>
-    <p>0-20'	15'	35'-48'1	20'</p>
-    <p>C-D	0' (10' max)	0-25'</p>
-    <p>0'	0' (10' max)	48'	20'</p>
-    <p>C-1	25'	0-25'	0-20'	0-15'	30'	20'</p>
-    <p>C-2	15'4 -25'	0-25'</p>
-    <p>0-20'	10'5-15'	35-48'2	20-25'2</p>
-    <p>S-C	25'	0-25'</p>
-    <p>0-20'	15'	35-60'2	20'</p>
-    <p>B-P	25'	0-25'	0-25'	15'	120'	20'</p>
-    <p>I-1	25'	0-25'	0-25'	15'	None	None</p>
-    <p>I-2	50'	50'	50'	50'	None	None</p>
-    <p>Where range is indicated, side or rear setbacks are when the adjacent parcel is a residential use or district.</p>
-    <p>Lower heights shown are for buildings and structures within 50 feet of a residential district or use.</p>
-    <p>The setback for self-storage buildings in the I-2 Industrial Zone may be reduced by the Planning Commission as noted in §15.3.16.130(E)(1).</p>
-    <p>15 feet, provided there is 30 feet from the building to the back of curb, otherwise 25 feet.</p>
-    <p>10 feet, provided there is 20 feet from the building to the back of curb, otherwise 15 feet.</p>
-    <p>Note: There is no minimum lot size, width, or lot frontage requirements. However, any new building or development must have permanent access on a paved road or driveway. Other improvements, such as curb and gutter, sidewalk, and additional pavement width or thickness may be required depending upon the nature of the business. (Ord. No. 07-04. Amended Industrial Zones Height Restrictions, 05/04/2004)</p>
-    <p>HISTORY</p>
-    <p>Amended by Ord. 10-09 on 6/17/2009</p>
-    <p>Amended by Ord. 15-15 on 9/15/2015</p>
-    <p>Amended by Ord. 14-16 on 9/20/2016</p>
-    <p>Amended by Ord. 03-17 on 2/7/2017</p>
-    <p>Amended by Ord. 26-17 on 11/7/2017</p>
-    <p>Amended by Ord. 03-18 on 2/20/2018</p>
-    <p>15.3.20 Overlay District Regulations</p>
-  </section>
+   <h2>Table 1 – Residential Development Standards</h2>
+  <table border="1">
+    <caption>Table 1 - Residential Development Standards</caption>
+    <thead>
+      <tr>
+        <th rowspan="2">District</th>
+        <th rowspan="2">Maximum Density<br>Per Acre</th>
+        <th colspan="3">Minimum Lot Dimensions</th>
+        <th colspan="4">Minimum Setback</th>
+        <th colspan="2">Max Building Height<sup>5</sup></th>
+      </tr>
+      <tr>
+        <th>Lot Area</th>
+        <th>Width</th>
+        <th>Depth</th>
+        <th>Front<sup>6</sup></th>
+        <th>Rear<sup>7</sup></th>
+        <th>Side</th>
+        <th>Corner</th>
+        <th>Principal Building</th>
+        <th>Accessory Building<sup>1</sup></th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr><td>A-E</td><td>N/A</td><td>40 acres</td><td>400'</td><td>400'</td><td>50'</td><td>50'</td><td>50'</td><td>50'</td><td>35'</td><td>35'</td></tr>
+      <tr><td>R-R</td><td>N/A</td><td>5 acres</td><td>200'</td><td>200'</td><td>50'</td><td>50'</td><td>25'</td><td>50'</td><td>35'</td><td>35'</td></tr>
+      <tr><td>R-1-80</td><td>0.4 units</td><td>80,000 sf</td><td>180'</td><td>200'</td><td>40'</td><td>80'</td><td>20'</td><td>30'</td><td>35'</td><td>20'</td></tr>
+      <tr><td>R-1-60</td><td>0.53 units</td><td>60,000 sf</td><td>160'</td><td>200'</td><td>40'</td><td>60'</td><td>20'</td><td>30'</td><td>35'</td><td>20'</td></tr>
+      <tr><td>R-1-40</td><td>0.8 units</td><td>40,000 sf</td><td>140'</td><td>200'</td><td>30'</td><td>40'</td><td>20'</td><td>30'</td><td>35'</td><td>20'</td></tr>
+      <tr><td>R-1-30</td><td>1.07 units</td><td>30,000 sf</td><td>130'</td><td>150'</td><td>40'</td><td>40'</td><td>15'</td><td>25'</td><td>35'</td><td>20'</td></tr>
+      <tr><td>R-1-20</td><td>1.60 units</td><td>20,000 sf</td><td>125'</td><td>150'</td><td>30'</td><td>30'</td><td>15'</td><td>25'</td><td>35'</td><td>20'</td></tr>
+      <tr><td>R-1-15</td><td>2.13 units</td><td>15,000 sf</td><td>100'</td><td>125'</td><td>20-25'<sup>2</sup></td><td>25'</td><td>10'</td><td>15-25'<sup>4</sup></td><td>35'</td><td>20'</td></tr>
+      <tr><td>R-1-12</td><td>2.67 units</td><td>12,000 sf</td><td>100'</td><td>100'</td><td>20-25'<sup>2</sup></td><td>25'</td><td>10'</td><td>15-25'<sup>4</sup></td><td>35'</td><td>20'</td></tr>
+      <tr><td>R-1-9</td><td>3.56 units</td><td>9,000 sf</td><td>85'</td><td>90'</td><td>15-25'<sup>2</sup></td><td>25'</td><td>10'</td><td>15-25'<sup>4</sup></td><td>35'</td><td>20'</td></tr>
+      <tr><td>R-1-8</td><td>4 units</td><td>8,000 sf</td><td>75'</td><td>90'</td><td>15-25'<sup>2</sup></td><td>25'</td><td>10'</td><td>15-25'<sup>4</sup></td><td>35'</td><td>20'</td></tr>
+      <tr><td>R-1-6</td><td>5.34 units</td><td>6,000 sf</td><td>60'</td><td>90'</td><td>15-25'<sup>2</sup></td><td>25'</td><td>5-10'<sup>3</sup></td><td>15-25'<sup>4</sup></td><td>35'</td><td>20'</td></tr>
+      <tr><td>R-3</td><td>12 units</td><td>6,000 sf</td><td>50'</td><td>90'</td><td>15-25'<sup>2</sup></td><td>25'</td><td>5-10'<sup>3</sup></td><td>15-25'<sup>4</sup></td><td>35'</td><td>20'</td></tr>
+      <tr><td>R-4</td><td>20 units</td><td>6,000 sf</td><td>50'</td><td>90'</td><td>15-25'<sup>2</sup></td><td>25'</td><td>5-10'<sup>3</sup></td><td>15-25'<sup>4</sup></td><td>50'</td><td>20'</td></tr>
+      <tr><td>R-5</td><td>18 units</td><td>6,000 sf</td><td>50'</td><td>90'</td><td>10-20'<sup>8</sup></td><td>15'</td><td>15'</td><td>15'</td><td>40'</td><td>20'</td></tr>
+      <tr><td>R-0</td><td>N/A</td><td>6,000 sf</td><td>50'</td><td>90'</td><td>11.5-25'<sup>2</sup></td><td>25'</td><td>5-10'<sup>3</sup></td><td>15-25'<sup>4</sup></td><td>35'</td><td>20'</td></tr>
+    </tbody>
+  </table>
+  <ol>
+    <li>Refer to 15.3.24.090(A) for accessory buildings.</li>
+    <li>15 feet to porches, 20 feet to living areas, 25 feet to garages or carports, and 20 feet to the front of a side entry garage.</li>
+    <li>Five (5) feet on one side, 10 feet on the other side for single-family dwellings except for lots with 50 feet of lot width or less. When the lot width is 50 feet or less the minimum setback is five (5) feet on each side. The setback is 10 feet for non-residential uses.</li>
+    <li>15 feet to living area, 25 feet to garages or carports, and 20 feet to the front of a side entry garage.</li>
+    <li>Flag poles are limited to the height of principal buildings in a residential zone.</li>
+    <li>Maximum setback is 250 feet, with an all-weather driveway, capable of supporting a fire truck, and with adequate turn around space for a fire truck at the end of the drive. Greater distances may be allowed if a fire hydrant is installed within 250 feet of the principal building.</li>
+    <li>On corner lots, the setback is reduced by five (5) feet.</li>
+    <li>10 feet minimum front setback, 20-foot maximum front setback.</li>
+    <li>Except as defined within the Infill Overlay Zone.</li>
+  </ol>
+</section>
+   <h2>Table 2 – Commercial and Industrial Development Standards</h2>
+  <table border="1">
+    <caption>Table 2 - Commercial and Industrial Development Standards</caption>
+    <thead>
+      <tr>
+        <th rowspan="2">District</th>
+        <th colspan="4">Minimum Setback<sup>1</sup></th>
+        <th colspan="2">Max Building Height</th>
+      </tr>
+      <tr>
+        <th>Front</th>
+        <th>Rear</th>
+        <th>Side</th>
+        <th>Corner</th>
+        <th>Principal Building</th>
+        <th>Accessory Building<sup>1</sup></th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr><td>C-O</td><td>15'<sup>4</sup>-25'</td><td>0-25'</td><td>0-10'</td><td>10'<sup>5</sup>-15'</td><td>30'</td><td>20'</td></tr>
+      <tr><td>C-UV</td><td>25'</td><td>0-25'</td><td>0-20'</td><td>15'</td><td>35'-48'<sup>1</sup></td><td>20'</td></tr>
+      <tr><td>C-D</td><td>0' (10' max)</td><td>0-25'</td><td>0'</td><td>0' (10' max)</td><td>48'</td><td>20'</td></tr>
+      <tr><td>C-1</td><td>25'</td><td>0-25'</td><td>0-20'</td><td>0-15'</td><td>30'</td><td>20'</td></tr>
+      <tr><td>C-2</td><td>15'<sup>4</sup>-25'</td><td>0-25'</td><td>0-20'</td><td>10'<sup>5</sup>-15'</td><td>35-48'<sup>2</sup></td><td>20-25'<sup>2</sup></td></tr>
+      <tr><td>S-C</td><td>25'</td><td>0-25'</td><td>0-20'</td><td>15'</td><td>35-60'<sup>2</sup></td><td>20'</td></tr>
+      <tr><td>B-P</td><td>25'</td><td>0-25'</td><td>0-25'</td><td>15'</td><td>120'</td><td>20'</td></tr>
+      <tr><td>I-1</td><td>25'</td><td>0-25'</td><td>0-25'</td><td>15'</td><td>None</td><td>None</td></tr>
+      <tr><td>I-2</td><td>50'</td><td>50'</td><td>50'</td><td>50'</td><td>None</td><td>None</td></tr>
+    </tbody>
+  </table>
+  <ol>
+    <li>Where range is indicated, side or rear setbacks are when the adjacent parcel is a residential use or district.</li>
+    <li>Lower heights shown are for buildings and structures within 50 feet of a residential district or use.</li>
+    <li>The setback for self-storage buildings in the I-2 Industrial Zone may be reduced by the Planning Commission as noted in §15.3.16.130(E)(1).</li>
+    <li>15 feet, provided there is 30 feet from the building to the back of curb, otherwise 25 feet.</li>
+    <li>10 feet, provided there is 20 feet from the building to the back of curb, otherwise 15 feet.</li>
+  </ol>
+  <p><strong>Note:</strong> There is no minimum lot size, width, or lot frontage requirements. However, any new building or development must have permanent access on a paved road or driveway. Other improvements, such as curb and gutter, sidewalk, and additional pavement width or thickness may be required depending upon the nature of the business. (Ord. No. 07-04. Amended Industrial Zones Height Restrictions, 05/04/2004)</p>
+</section>
   <section id="15_3_20_010">
     <h3>15.3.20.010 Airport Impact Overlay</h3>
   </section>
