--- a/text-files/index.html
+++ b/text-files/index.html
@@ -15,7 +15,7 @@
   <li><a href="title_12_streets_and_sidewalks.txt">Title 12 – Streets and Sidewalks</a></li>
   <li><a href="title_13_utilities.txt">Title 13 – Utilities</a></li>
   <li><a href="title_14_buildings_and_construction.txt">Title 14 – Buildings and Construction</a></li>
-  <li><a href="title_15_land_use_updated.txt">Title 15 – Land Use (Updated)</a></li>
+  <li><a href="title_15_land_use.txt">Title 15 – Land Use</a></li>
 </ul>
 <h2>🛠️ Public Works Chapters</h2>
 <ul>
