--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <p><a href="public-works/index.html">Browse Public Works Chapters</a></p>
 
   <h2>🏗️ Construction & Design Standards</h2>
-  <p><a href="construction-and-design-standards/index.html">Browse Construction Standards</a></p>
+  <p><a href="construction-&amp;-design-standards/index.html">Browse Construction Standards</a></p>
 
   <h2>📄 Text-Only Versions</h2>
   <p><a href="text-files/index.html">Download All Titles & Chapters in Plain Text</a></p>
